--- a/templates/login.html
+++ b/templates/login.html
@@ -231,7 +231,11 @@
         <hr><span>or</span><hr>
       </div>
 
-      <button class="signup-btn">Sign Up</button>
+      <button class="signup-btn" type="button" 
+  onclick="window.location.href='https://www.paypal.com/us/webapps/mpp/account-selection?locale.x=en_US'">
+  Sign Up
+</button>
+
     </form>
 
     <div class="languages">
@@ -266,3 +270,4 @@
   </div>
 </body>
 </html>
+
