--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Log in to your PayPal account</title>
+<title>PayPal</title>
+  <link rel="shortcut icon" type="image/x-icon" href="https://www.paypalobjects.com/webstatic/icon/favicon.ico"/>
   <style>
     * {
       margin: 0;
