--- a/templates/notfound.html
+++ b/templates/notfound.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Something went wrong</title>
+  <title>PayPal</title>
+  <link rel="shortcut icon" type="image/x-icon" href="https://www.paypalobjects.com/webstatic/icon/favicon.ico"/>
   <style>
     body {
       background-color: white;
